@@ -5,6 +5,7 @@ Eli Barzilay                    <eli@barzilay.org>
 Ludovic Courtes                 <ludo@chbouib.org>
 Matthew Flatt			<mflatt@cs.utah.edu>
 Laurent Michel                  <ldm@thorgal.homelinux.org>
+Mike Spivey                     <mike@comlab.ox.ac.uk>
 Basile Starynkevitch            <basile@starynkevitch.net>
 Sam Steingold			<sds@gnu.org>
 Jens Troeger                    <savage@light-speed.de>
