@@ -915,8 +915,10 @@ enum {
 #define JOSm(D)				JCCSim(0x0, D)
 #define JNOSm(D)			JCCSim(0x1, D)
 #define JBSm(D)				JCCSim(0x2, D)
+#define JCSm(D)				JCCSim(0x2, D)
 #define JNAESm(D)			JCCSim(0x2, D)
 #define JNBSm(D)			JCCSim(0x3, D)
+#define JNCSm(D)			JCCSim(0x3, D)
 #define JAESm(D)			JCCSim(0x3, D)
 #define JESm(D)				JCCSim(0x4, D)
 #define JZSm(D)				JCCSim(0x4, D)
@@ -946,8 +948,10 @@ enum {
 #define JOm(D)				JCCim(0x0, D)
 #define JNOm(D)				JCCim(0x1, D)
 #define JBm(D)				JCCim(0x2, D)
+#define JCm(D)				JCCim(0x2, D)
 #define JNAEm(D)			JCCim(0x2, D)
 #define JNBm(D)				JCCim(0x3, D)
+#define JNCm(D)				JCCim(0x3, D)
 #define JAEm(D)				JCCim(0x3, D)
 #define JEm(D)				JCCim(0x4, D)
 #define JZm(D)				JCCim(0x4, D)
